--- a/index.html
+++ b/index.html
@@ -73,7 +73,91 @@
             </div>
             <div class="row">
               <div class="ten wide column">
-                <!-- Experience -->
+                <h3>Experience</h3>
+                <ul class="timeline">
+                  <li>
+                    <p><em>2018</em></p>
+                    <p>Amongst many fighters of the past was featured in the movie "Ready Player One". Ryu ready always!</p>
+                  </li>
+                  <li>
+                    <p><em>2017</em></p>
+                    <p>United with unknown until then to me Power Rangers to defea resurrected M.Bison.Damn good fighters they are, even not knowing karate ways!</p>
+                  </li>
+                  <li>
+                    <p><em>2016</em></p>
+                    <p>In "Street Fighter V" once and for all erased M.Bison from earth and tamed my inner Evil Ryu. Also spent some time on a side-project, mini-series "Street Fighter: Resurrection".</p>
+                  </li>
+                  <li>
+                    <p><em>2014</em></p>
+                    <p>Filmed in a martial arts tutorial "Street Fighter: Assassin's Fist", revealing to audience forgotten art of Ansatsuken.</p>
+                  </li>
+                  <li>
+                    <p><em>2012</em></p>
+                    <p>The gods of intenet concluded me in the animated movie "Wreck-It Ralph", but rewarded me with a good drink for it!</p>
+                  </li>
+                  <li>
+                    <p><em>2008</em></p>
+                    <p>My evil alter ego sneaked out of control and became a boss in "Street Fighter IV".</p>
+                  </li>
+                  <li>
+                    <p><em>2006</em></p>
+                    <p>Borrowed my famous ripped gi to Soki in "Onimusha: Dawn of Dreams", gods informed me he needed that for the battle.</p>
+                  </li>
+                  <li>
+                    <p><em>1998</em></p>
+                    <p>Defeated M. Bison in "Street Fighter Alpha 2", bastard wanted to use my heroic body for his evil intentions, but retreated with shame. Also this year I encountered Marvel universe in "Marvel vs. Capcom: Clash of Super Heroes" fighter,loyal to my employer, Capcom, of course.</p>
+                  </li>
+                  <li>
+                    <p><em>1997</em></p>
+                    <p>Reunited with Ken, my friend and opponent in "Street Fighter III". Men's friendship works mysteriously. Also helped with Arika project "Street Fighter EX"</p>
+                  </li>
+                  <li>
+                    <p><em>1996</em></p>
+                    <p>Took care of villainous Akuma in "Street Fighter Alpha 2". As a freelance on "Super Puzzle Fighter II Turbo" tried myself in a new genre, puzzle games. Let the wrath of seven heavens come upon these malicious enigmas, never again!</p>
+                  </li>
+                  <li>
+                    <p><em>1995</em></p>
+                    <p>Kept fighting in "Street Fighter Alpha: Warriors' Dreams".</p>
+                  </li>
+                  <li>
+                    <p><em>1994</em></p>
+                    <p>Screened in a movie "Street Fighter", so that the batllesof past would not be forgotten by millenial generation.</p>
+                  </li>
+                  <li>
+                    <p><em>1991</em></p>
+                    <p>Was promoted to "Street Fighter II". Didn't stay there for long, celebrations and office dwelling is not for me!</p>
+                  </li>
+                  <li>
+                    <p><em>1987</em></p>
+                    <p>Started working for Capcom project "Street Fighter". My partner was Ken Masters, the boss'name was Sagat.</p>
+                  </li>
+                </ul>
+                    <h3>ACHIEVEMENTS</h3>
+                      <ul>
+                        <li>
+                          <p>#1in <strong>"Top 25 Street Fighter Characters"</strong> by IGN, who also called me "fancy", "icon" and "a testament to the virtue of simplicity" ❤️</p>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <p>#2 in "Top 20 Street Fighter Characters of All Time" by GameDaily, same council found me worth of #6 place in "Top 25 Capcom Characters of All Time", which I proudly share with my partner Ken</p>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <p>I was named "5th Most Powerful Street Fighter Character" by Screen Rant-san</p>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <p>#71 in "Top 100 Heroes of All Time" by UGO Networks, also recognized #2 in their list of "Top 50 Street Fighter Characters"</p>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <p>In a survey of 4000 online matches for Super Street Fighter IV, I got to be the most popular character, with 16.6% of players choosing my side</p>
+                        </li>
+                      </ul>
               </div>
               <div class="six wide column">
                 <!-- Languages -->
