Add secondary information

--- a/index.html
+++ b/index.html
@@ -135,39 +135,63 @@
                     <h3>ACHIEVEMENTS</h3>
                       <ul>
                         <li>
-                          <p>#1in <strong>"Top 25 Street Fighter Characters"</strong> by IGN, who also called me "fancy", "icon" and "a testament to the virtue of simplicity" ❤️</p>
+                          <p>#1 in <strong>"Top 25 Street Fighter Characters"</strong> by IGN, who also called me "fancy", "icon" and "a testament to the virtue of simplicity" ❤️</p>
                         </li>
                       </ul>
                       <ul>
                         <li>
-                          <p>#2 in "Top 20 Street Fighter Characters of All Time" by GameDaily, same council found me worth of #6 place in "Top 25 Capcom Characters of All Time", which I proudly share with my partner Ken</p>
+                          <p>#2 in <strong>"Top 20 Street Fighter Characters of All Time"</strong> by GameDaily, same council found me worth of #6 place in "Top 25 Capcom Characters of All Time", which I proudly share with my partner Ken</p>
                         </li>
                       </ul>
                       <ul>
                         <li>
-                          <p>I was named "5th Most Powerful Street Fighter Character" by Screen Rant-san</p>
+                          <p>I was named <strong>"5th Most Powerful Street Fighter Character"</strong> by Screen Rant-san</p>
                         </li>
                       </ul>
                       <ul>
                         <li>
-                          <p>#71 in "Top 100 Heroes of All Time" by UGO Networks, also recognized #2 in their list of "Top 50 Street Fighter Characters"</p>
+                          <p>#71 in <strong>"Top 100 Heroes of All Time"</strong> by UGO Networks, also recognized #2 in their list of <strong>"Top 50 Street Fighter Characters"</strong></p>
                         </li>
                       </ul>
                       <ul>
                         <li>
-                          <p>In a survey of 4000 online matches for Super Street Fighter IV, I got to be the most popular character, with 16.6% of players choosing my side</p>
+                          <p>In a survey of 4000 online matches for <strong>Super Street Fighter IV</strong>, I got to be the most popular character, with 16.6% of players choosing my side</p>
                         </li>
                       </ul>
               </div>
               <div class="six wide column">
-                <!-- Languages -->
-                <!-- Skills -->
-                <!-- Character -->
-                <!-- Likes -->
-                <!-- Dislikes -->
-                <!-- Wants -->
-                <!-- Education -->
-                <!-- Articles -->
+                <section>
+                  <h3>LANGUAGES</h3>
+                  <p>🇺🇸 ENGLISH 🇨🇳 MANDARIN 🇯🇵 JAPANESE</p>
+                </section>
+                <section>
+                  <h3>SKILLS</h3>
+                  <p>KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES DOING BURGERS MASHING POTATOES COPYWRITING ACTING VOICEOVERS</p>
+                </section>
+                <section>
+                  <h3>CHARACTER</h3>
+                  <p>NOBLE DIRECT BOLD CONFIDENT DARING SCHIZOPHRENIC DRAMATIC PERSUASIVE IMMEDIATE WISE</p>
+                </section>
+                <section>
+                  <h3>LIKES 😃</h3>
+                  <p>GI VEGETABLES BLOOD SMALL MARSHMELLOWS RED COLOR KILLED ENEMY</p>
+                </section>
+                <section>
+                  <h3>DISLIKES 😞</h3>
+                  <p>BISONS GHOSTS SMARTPHONES SMELL OF SEAFOOD BARBER SHOPS SLEEVES</p>
+                </section>
+                <section>
+                  <h3>WANTS 🥺</h3>
+                  <p>BE FIT WRITE MORE BOOKS FIND A GIRLFRIEND TO GO TO CINEMA WITH KILL ALL OF AKUMA FAMILY</p>
+                </section>
+                <section>
+                  <h3>LIFE & EDUCATION</h3>
+                  <p>To live is to fight and to fight is to live. I started learning fighting at my master Gouken's castle, I was beaten at head way too often to remember when exactly.</p>
+                </section>
+                <section>
+                  <h3>LIFE LESSON</h3>
+                  <p>You must defeat Sheng Long to stand a chance.</p>
+                </section>
               </div>
             </div>
           </div>
