--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
-                <!-- Avatar -->
+                <div class="avatar-wrapper">
+                  <object class="avatar" data="./assets/images/foto.jpg" role="img" aria-label="My foto"></object>
+                </div>
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
